refactor router, config and OpenAPI fixes
